# Tupi-8

./: Cargo.toml  Makefile  README.md  main.lua  main_bytecode_loader.c  tupi_bootstrapper.c
src/: renderizador.rs  sprites.rs
src/Camera/: Camera.c  Camera.h
src/Engine/: Documentação.md  TupiEngine.lua  engine_core.lua  engine_mundo.lua  engine_visual.lua  engineffi.lua  sintaxe.lua  texto_normalizar.lua  tupi_console.lua  tupi_editor.lua  tupi_splashscreen.lua  tupi_teclado.lua
src/Inputs/: Inputs.c  Inputs.h
src/Mapas/: Mapas.c  Mapas.h
src/Renderizador/: Renderer.c  Renderer.h  RendererGL.c
src/Renderizador/shaders/: tupi2d.frag  tupi2d.frag.spv  tupi2d.vert  tupi2d.vert.spv  tupi2d_frag_spv.h  tupi2d_vert_spv.h
src/Sprites/: Sprites.c  Sprites.h
