[package]
name    = "tupi_seguro"
version = "0.3.0"
edition = "2021"

[lib]
name       = "tupi_seguro"
crate-type = ["staticlib"]

[[bin]]
name = "tupi_pack"
path = "src/bin/tupi_pack.rs"

[dependencies]
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp"] }
zip   = { version = "2", default-features = false, features = ["deflate"] }

[profile.release]
opt-level = 3
lto       = true
panic     = "abort"